# parallel-processing

./: CMakeLists.txt  README.md
docs/lab1/: doc.md
lab1/: main.cpp  paralel_atomic_pi.cpp  parallel_local_pi.cpp  parallel_pi.cpp  parallel_reduction_pi.cpp  parallel_tab_pi.cpp  serial_pi.cpp
